21/set/2018 - alteração do Produto... o click na lista de produtos abre o DetalheProduto. Tarefa -  alterar o Cliente para que ai clicar no nome da lista de clientes abra o DetalhesClientes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,8 @@
     <string name="email">Email</string>
     <string name="senha">Senha</string>
     <string name="todo">TODO</string>
+    <string name="menu_pesquisar">Pesquisar</string>
+    <string name="title_menu_lercodigodebarras">Ler código de Barras</string>
+    <string name="preco_produto">Preço do Produto</string>
 
 </resources>
